Estructura del backend de administración v.1.2.0
